# YoloV8-NCNN-Android

./: .gitignore  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle  setup.bat  setup.sh
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yolov8ncnn/: AutoClickService.java  BoxInfo.java  MainActivity.java  MediaProjectionRequestActivity.java  OverlayService.java  ScreenCaptureService.java  SettingsManager.java  YoloV8Ncnn.java
app/src/main/jni/: CMakeLists.txt  yolov8ncnn_jni.cpp
app/src/main/res/layout/: activity_main.xml  overlay_panel.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: accessibility_config.xml
